test/tests/stages/18_structures/invalid_struct_tags/deref_undeclared.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: s
                      Bool: 0
                  None: 
            CS: 
              CExpression: 
                CDereference: 
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
